# bouncy-bug

./: .gitignore  Cargo.toml  manifest.toml  rust-toolchain.toml
assets/: bouncy_bug.tiled-project  bouncy_bug.tiled-session  level-1.edit.tmx  main-tileset.tsx  player.tx  square.edit.tmx  square.tmx  test-map.edit.tmx  test-map.export.tmx  test-map.tmx  test-world.world  tiles.aseprite  tiles.export.tsj  tiles.tsx  tileset-table-24-24.aseprite  title-screen.edit.tmx  transition-simple.aseprite
bevy_playdate/: Cargo.toml
bevy_playdate/bevy_playdate_macros/: Cargo.toml
bevy_playdate/bevy_playdate_macros/src/: lib.rs
bevy_playdate/src/: angle.rs  asset.rs  debug.rs  event.rs  file.rs  input.rs  jobs.rs  lib.rs  sprite.rs  time.rs  transform.rs  view.rs  visibility.rs
diagnostic/: Cargo.toml
diagnostic/src/: lib.rs  pd.rs  std.rs
editor/: Cargo.toml
editor/src/: main.rs
editor/src/pdtiled/: mod.rs
game/: Cargo.toml
game/src/: game.rs  lib.rs  state.rs
game/src/rkyv/: mod.rs
game/src/tiled/: collision.rs  export.rs  job.rs  load.rs  mod.rs  spawn.rs  types_json.rs
pd_asset/: Cargo.toml
pd_asset/src/: archive.rs  dependencies.rs  gif.rs  lib.rs  tilemap.rs  tileset.rs
src/: file.rs  game.rs  lib.rs
src/tiled/: export.rs  io.rs  job.rs  load.rs  loader.rs  mod.rs  types_json.rs
tiledpd/: Cargo.toml
tiledpd/src/: dependencies.rs  lib.rs  properties.rs  tilemap.rs  tileset.rs
