
[package]
name = "bouncy-bug"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["bevy_playdate"]

[lib]
path = "src/lib.rs"
crate-type = [
    "staticlib", # for hardware
    "dylib",     # for simulator
    "rlib",      # to link with bin
]

[dependencies]
playdate = { git = "https://github.com/boozook/playdate", rev = "66da849" }
portable-atomic-util = "0.2.4"
bevy_ecs = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["bevy_reflect", "portable-atomic"] }
bevy_app = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["bevy_reflect", "portable-atomic"] }
bevy_reflect = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["bevy"]}
bevy_playdate = { path = "bevy_playdate" }
hashbrown = { version = "0.15.2", default-features = false, features = ["default-hasher"] }
bevy_input = { git = "https://github.com/bevyengine/bevy", default-features = false, features = ["smol_str"] }
tiled = { git = "https://github.com/Niashi24/rs-tiled.git", branch = "nostd" }
no_std_io2 = "0.9.0"
derive_more = { version = "2.0.1", default-features = false, features = ["full"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.217", default-features = false, features = ["derive", "serde_derive"] }

# Playdate Package Info
# doc: https://github.com/boozook/playdate/blob/main/support/build/README.md#metadata
# official doc: https://sdk.play.date/#pdxinfo
[package.metadata.playdate]
name = "bevy-playdate"
author = "You, Inc"
version = "0.1.0"
bundle-id = "com.yourcompany.bevy.playdate"
build-number = 3
description = "Description for the bevy-playdate program."

content-warning = "This game contains mild realistic, violence and bloodshed."
content-warning2 = "Really scary game."

image-path = "img/system"
launch-sound-path = "sfx/jump"

# Assets Rules
# doc: https://github.com/boozook/playdate/blob/main/support/build/README.md#assets
[package.metadata.playdate.assets]
"assets/test-map.tmx" = "assets/test-map.export.tmx"
"assets/tiles.tsx" = "assets/tiles.tsx"
"assets/tiles.png" = "assets/tiles.png"

#"img/system/" = "${PLAYDATE_SDK_PATH}/Examples/Game Template/Source/SystemAssets/*.png"
#"sfx/jump.wav" = "${PLAYDATE_SDK_PATH}/Examples/Level 1-1/Source/sfx/jump.wav"
# This is a complex way of specifying what assets should be included.
# Left hand is a path where asset should be in the package,
# Right hand is the path where source(s) should be found.

# Also this way supports simple include and exclude instructions:
# "rel-to-crate-root/file-to-include" = true   # left hand is a local path, relative to crate-root,
# "file-to-exclude" = false  # OR resulting path that where asset will be in the resulting package.

# Another way to declare assets is much simpler:
# [package.metadata.playdate]
# assets = ["assets/**/*.wav", "assets/**/*.png"]
# That means "just include all of this".


# Assets Configuration
[package.metadata.playdate.options.assets]
dependencies = true    # allow to build assets for dependencies (default is `true`)
overwrite = true       # overwrite existing (default is `true`)
method = "link"        # "copy" or "link"   (default is `link`)
follow-symlinks = true # follow symlinks    (default is `true`)

[patch.crates-io]
fixedbitset = { git = "https://github.com/Niashi24/fixedbitset.git", branch = "no_simd" }
#playdate = { git = "https://github.com/boozook/playdate", rev = "66da849"}
