cargo-features = ["edition2024"]

[workspace]
members = ["bevy_playdate", "diagnostic", "editor", "game", "pd_asset"]
resolver = "3"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
fixedbitset = { git = "https://github.com/Niashi24/fixedbitset.git", branch = "no_simd" }
