cargo-features = ["edition2024"]

[package]
name = "bevy_playdate"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_playdate_macros = { path = "bevy_playdate_macros" }
playdate = { git = "https://github.com/boozook/playdate", rev = "66da849" }
bevy_ecs = { version = "0.16", default-features = false, features = ["bevy_reflect"] }
bevy_app = { version = "0.16", default-features = false, features = ["bevy_reflect"] }
bevy_platform = { version = "0.16", default-features = false, features = ["alloc"] }
bevy_reflect = { version = "0.16", default-features = false}
bevy_state = { version = "0.16", default-features = false }
bevy_time = { version = "0.16", default-features = false }
bevy_input = { version = "0.16", default-features = false, features = ["smol_str"] }
bevy_math = { version = "0.16", default-features = false, features = ["libm", "alloc"] }
diagnostic = { path = "../diagnostic", features = ["pd"] }
genawaiter = { git = "https://github.com/Niashi24/genawaiter.git", branch = "no-std", default-features = false }
derive_more = { version = "1.0.0", default-features = false, features = ["full"] }
hashbrown = { version = "0.15.2", default-features = false, features = ["default-hasher"] }
no_std_io2 = { version = "0.9.0", features = ["alloc"] }
