cargo-features = ["edition2024"]

[package]
name = "editor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
toml_edit = "0.22.24"
hashbrown = "0.15.2"

geo = "0.30.0"
gif = "0.13.1"
indexmap = "2.9.0"
lz4_flex = { version = "0.11", default-features = false }
tiled = "0.14.0"
pd_asset = { path = "../pd_asset" }
image = "0.25.6"
regex = "1.11.1"
itertools = "0.14.0"
