cargo-features = ["edition2024"]

[package]
name = "tiledpd"
version = "0.1.0"
edition = "2024"

[dependencies]
hashbrown = { version = "0.15.2", features = ["serde"] }
rkyv = { version = "0.8.10", default-features = false, features = ["alloc", "little_endian", "hashbrown-0_15", "bytecheck"] }
bytecheck = "0.8.1"
